<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/nature3">


    <ScrollView
        android:layout_marginTop="5dp"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="vertical">

        <LinearLayout
            android:paddingBottom="30dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">



            <TextView
                android:background="@drawable/bgcolor"
                android:layout_gravity="center"
                android:gravity="center"
                android:foregroundGravity="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/visionprashtavana"
                />
            <Button
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000"/>


            <TextView

                android:foregroundGravity="center"
                android:layout_gravity="center"
                android:background="#c2fd69"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="25sp"
                android:gravity="top"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="ग्रामविकास"


                android:layout_marginTop="5dp" />

            <TextView
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:foregroundGravity="center"
                android:textSize="17dp"

                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/gramvikas"
                />

            <Button
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000"/>

            <TextView
                android:layout_margin="5dp"

                android:layout_gravity="center"
                android:background="#c2fd69"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="25sp"
                android:gravity="top"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/janjagruti1"


                android:layout_marginTop="10dp" />


            <TextView
                android:paddingTop="8dp"
                android:paddingBottom="8dp"

                android:textSize="17dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:foregroundGravity="center"

                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/janjagruti"
                />


            <Button
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000"/>

            <TextView
                android:layout_margin="5dp"
                android:layout_gravity="center"
                android:background="#c2fd69"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="25sp"
                android:gravity="top"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/shikshan1"


                android:layout_marginTop="1dp" />

            <TextView
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textSize="17dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:foregroundGravity="center"

                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/shikshan"
                />

            <Button
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000"/>

            <TextView
                android:layout_margin="5dp"
                android:layout_gravity="center"
                android:background="#c2fd69"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="25sp"
                android:gravity="top"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/paryavaran1"


                android:layout_marginTop="1dp" />

            <TextView
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textSize="17dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:foregroundGravity="center"

                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/paryavaran"
                />

            <Button
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000"/>

            <TextView
                android:layout_margin="5dp"
                android:layout_gravity="center"
                android:background="#c2fd69"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="25sp"
                android:gravity="top"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/samajikaikya1"


                android:layout_marginTop="1dp" />

            <TextView
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textSize="17dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:foregroundGravity="center"

                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/samajikaikya"
                />

            <Button
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000"/>

            <TextView
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textSize="17dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:foregroundGravity="center"
                android:background="@drawable/bgcolor"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/itar"
                />

            <Button
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000"/>


        </LinearLayout>

    </ScrollView>

</RelativeLayout>





